--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: grey; }
+  background: #F2F2F2; }
   body .container header {
     position: relative;
     text-align: center; }
@@ -11,5 +11,12 @@ body {
     margin: 50px 0;
     background: white;
     padding: 40px; }
+    body .container section .content-box .category-selects .cat-btn.active {
+      background: blue; }
+    body .container section .content-box .report {
+      display: flex;
+      border-bottom: 1px solid grey; }
+      body .container section .content-box .report .report-date {
+        flex-basis: 30%; }
 
 /*# sourceMappingURL=main.css.map */
