--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,5 @@
 body {
-  background: grey;
+  background: #F2F2F2;
   .container {
     header {
       position: relative;
@@ -18,6 +18,20 @@ body {
         margin: 50px 0;
         background: white;
         padding: 40px;
+        .category-selects {
+          .cat-btn {
+            &.active {
+              background: blue;
+            }
+          }
+        }
+        .report {
+          display: flex;
+          border-bottom: 1px solid grey;
+          .report-date {
+            flex-basis: 30%;
+          }
+        }
       }
     }
   }
