--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,9 @@
 body {
   background: #F2F2F2;
+  h1 {
+    padding-top: 20px;
+    font-weight: lighter;
+  }
   .container {
     header {
       position: relative;
@@ -8,6 +12,9 @@ body {
         position: absolute;
         top: 50%;
         left: 10px;
+        .img-back {
+          height: 30px;
+        }
       }
       .header-title {
 
@@ -18,21 +25,104 @@ body {
         margin: 50px 0;
         background: white;
         padding: 40px;
-        .category-selects {
-          .cat-btn {
-            &.active {
-              background: blue;
+        .date-search {
+          display: flex;
+          margin-bottom: 40px;
+          .date-select {
+            margin-right: 30px;
+            padding: 0 20px;
+            width: 130px;
+            font-size: 20px;
+            height: 70px;
+            background: #FFFFFF;
+            border: none;
+            border-bottom: 2px solid black;
+            -webkit-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+            box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+          }
+          .search {
+            .search-input {
+              height: 70px;
+              border: none;
+              border-bottom: 2px solid black;
+              -webkit-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+              -moz-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+              box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+              padding-right: 180px;
+            }
+            .search-btn {
+              height: 40px;
+              position: absolute;
+              right: 10px;
+              top: 15px;
+              z-index: 10;
+              button.search {
+                background: #65C1D4;
+                color: #FFFFFF;
+                border-radius: 20px;
+                border: none;
+                padding: 0 40px;
+              }
             }
           }
         }
-        .report {
-          display: flex;
-          border-bottom: 1px solid grey;
-          .report-date {
-            flex-basis: 30%;
+        .category-selects {
+          .cat-btn {
+            padding: 5px 15px;
+            background: white;
+            border-radius: 10px;
+            margin-right: 10px;
+            border: 1px solid lightgray;
+            color: lightgray;
+            text-transform: capitalize;
+            outline: none;
+            &.active {
+              background: #F7FCFD;
+              color: black;
+            }
+          }
+        }
+        #report-list {
+          .report {
+            display: flex;
+            border-bottom: 1px solid lightgray;
+            margin-bottom: 20px;
+            a {
+              margin-right: 40px;
+              color: #6DC4D6;
+              &:focus, &:hover {
+                color: #6DC4D6;
+              }
+            }
+            .report-date {
+              flex-basis: 20%;
+              .date {
+                font-weight: bold;
+              }
+              .report-cat {
+                padding-top: 20px;
+              }
+            }
+            .report-content {
+              .report-link {
+                margin-bottom: 20px;
+                .file-list {
+                  list-style: none;
+                  margin-left: 140px;
+                  padding-left: 0;
+                  padding-top: 10px;
+                  margin-top: 10px;
+                  border-top: 1px solid lightgray;
+                }
+              }
+            }
           }
         }
       }
     }
+  }
+  .hidden {
+    display: none;
   }
 }
