--- a/main.scss
+++ b/main.scss
@@ -29,6 +29,7 @@ body {
           display: flex;
           margin-bottom: 40px;
           .date-select {
+            outline: none;
             margin-right: 30px;
             padding: 0 20px;
             width: 130px;
@@ -105,6 +106,7 @@ body {
               }
             }
             .report-content {
+              width: 80%;
               .report-link {
                 margin-bottom: 20px;
                 .file-list {
